<resources>
    <string name="app_name">Parcel Tracker</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="email">Email</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_receiver_maps">Map</string>

</resources>
